c4prj2_input/grade.txt
Grading at Thu Aug  1 13:16:50 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:11:10: error: assignment to expression with array type
   cursor = strcpy(cursor, str);
          ^
input.c:22:13: error: lvalue required as increment operand
       cursor++;
             ^
input.c:29:9: error: assignment to expression with array type
  cursor = card_end + 1;
         ^
input.c:33:9: error: assignment to expression with array type
  cursor += 2;
         ^
Compilation of input.c failed

Overall Grade: F
